Bug 235549 - [nullfs] panic: Don't call insmntque(foo, NULL)
Summary: [nullfs] panic: Don't call insmntque(foo, NULL)
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: CURRENT
Hardware: Any Any
: --- Affects Only Me
Assignee: freebsd-fs (Nobody)
URL:
Keywords: stress2
Depends on:
Blocks:
 
Reported: 2019-02-06 07:58 UTC by Peter Holm
Modified: 2019-09-13 18:29 UTC (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Holm freebsd_committer freebsd_triage 2019-02-06 07:58:40 UTC
nullfs(5) stress test scenario.

panic: Don't call insmntque(foo, NULL)
cpuid = 1
time = 1549366443
KDB: stack backtrace:
db_trace_self_wrapper() at db_trace_self_wrapper+0x47/frame 0xfffffe00b98fe610
vpanic() at vpanic+0x20c/frame 0xfffffe00b98fe670
panic() at panic+0x43/frame 0xfffffe00b98fe6d0
insmntque1() at insmntque1+0x306/frame 0xfffffe00b98fe720
null_nodeget() at null_nodeget+0x1a1/frame 0xfffffe00b98fe790
null_vptocnp() at null_vptocnp+0x15d/frame 0xfffffe00b98fe7f0
VOP_VPTOCNP_APV() at VOP_VPTOCNP_APV+0xee/frame 0xfffffe00b98fe820
vn_vptocnp() at vn_vptocnp+0x136/frame 0xfffffe00b98fe8b0
vn_fullpath1() at vn_fullpath1+0x1c0/frame 0xfffffe00b98fe920
kern___getcwd() at kern___getcwd+0xf9/frame 0xfffffe00b98fe980
amd64_syscall() at amd64_syscall+0x45e/frame 0xfffffe00b98feab0

https://people.freebsd.org/~pho/stress/log/crossmp4.txt
Comment 1 commit-hook freebsd_committer freebsd_triage 2019-02-08 08:20:40 UTC
A commit references this bug:

Author: kib
Date: Fri Feb  8 08:20:19 UTC 2019
New revision: 343899
URL: https://svnweb.freebsd.org/changeset/base/343899

Log:
  Un null_vptocnp(), cache vp->v_mount and use it for null_nodeget() call.

  The vp vnode is unlocked during the execution of the VOP method and
  can be reclaimed, zeroing vp->v_data.  Caching allows to use the
  correct mount point.

  Reported and tested by:	pho
  PR: 235549
  Sponsored by:	The FreeBSD Foundation
  MFC after:	1 week

Changes:
  head/sys/fs/nullfs/null_vnops.c
Comment 2 commit-hook freebsd_committer freebsd_triage 2019-02-15 11:21:20 UTC
A commit references this bug:

Author: kib
Date: Fri Feb 15 11:20:25 UTC 2019
New revision: 344154
URL: https://svnweb.freebsd.org/changeset/base/344154

Log:
  MFC r343899:
  In null_vptocnp(), cache vp->v_mount and use it for null_nodeget() call.

  PR:	235549

Changes:
_U  stable/12/
  stable/12/sys/fs/nullfs/null_vnops.c
Comment 3 commit-hook freebsd_committer freebsd_triage 2019-02-15 11:29:29 UTC
A commit references this bug:

Author: kib
Date: Fri Feb 15 11:28:33 UTC 2019
New revision: 344156
URL: https://svnweb.freebsd.org/changeset/base/344156

Log:
  MFC r343899:
  In null_vptocnp(), cache vp->v_mount and use it for null_nodeget() call.

  PR:	235549

Changes:
_U  stable/11/
  stable/11/sys/fs/nullfs/null_vnops.c